Raw backend impl, need to do custom exceptions, security, sha
